--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -76,7 +76,7 @@ import Icon from "./Icon.astro";
       position: absolute;
       inset: 0;
       z-index: -1;
-      background: var(--sand-1);
+      background: var(--orange-1);
       opacity: 0.96;
       box-shadow: 0 1px 0 var(--sand-a6);
     }
