--- a/src/components/SongDetails.astro
+++ b/src/components/SongDetails.astro
@@ -1,6 +1,7 @@
 ---
 import type { Database } from "../types";
 import Icon from "./Icon.astro";
+import Tag from "./Tag.astro";
 
 type Props = {
   type: "original" | "cover";
@@ -17,24 +18,26 @@ const { type, song } = Astro.props;
   itemtype="https://schema.org/MusicRecording"
 >
   <a class="link" href={song.url} itemprop="url" aria-label="Open in Spotify">
-    <img
-      class="albumArt"
-      src={song.album_img}
-      alt={`${song.album_name} album art`}
-      itemprop="image"
-    />
-    <div class="spotify-overlay">
+    {
+      song.album_img && (
+        <img
+          class="albumArt"
+          src={song.album_img}
+          alt={`${song.album_name} album art`}
+          itemprop="image"
+        />
+      )
+    }
+    <div class="album-overlay">
+      <Tag
+        text={type === "original" ? "Listen to original" : "Listen to cover"}
+      />
       <Icon icon="spotify" variant="filled" />
     </div>
   </a>
   <div class="details">
-    <div class="util">
-      <div class="tag">
-        {type === "original" ? "Original" : "Cover"}
-      </div>
-    </div>
     <h2 class="artist" itemprop="byArtist">{song.artists.join(", ")}</h2>
-    <div class="album" itemprop="inAlbum">{song.album_name}</div>
+    <!-- <div class="album" itemprop="inAlbum">{song.album_name}</div> -->
     <time class="year" itemprop="datePublished">{song.album_year}</time>
   </div>
 </div>
@@ -44,10 +47,13 @@ const { type, song } = Astro.props;
     display: flex;
     flex-direction: column;
     flex-shrink: 0;
+    padding-inline: var(--space-s);
+    width: clamp(100px, 50vw, 600px);
 
     &.original {
       text-align: right;
       align-items: flex-end;
+      width: clamp(80px, 40vw, 480px);
     }
   }
 
@@ -65,16 +71,6 @@ const { type, song } = Astro.props;
     }
   }
 
-  .tag {
-    display: inline-block;
-    background: var(--sand-3);
-    color: var(--sand-11);
-    padding-inline: var(--space-2xs);
-    border-radius: var(--radius-full);
-    font-size: var(--step-0);
-    margin-block-end: var(--space-2xs);
-  }
-
   .artist {
     font-size: var(--step-3);
   }
@@ -88,20 +84,23 @@ const { type, song } = Astro.props;
     display: block;
   }
 
-  .spotify-overlay {
+  .album-overlay {
     position: absolute;
     left: var(--space-xs);
     bottom: var(--space-xs);
     transition: opacity var(--transition-duration) ease-in-out;
     display: flex;
+    flex-direction: row-reverse;
     align-items: center;
     justify-content: center;
+    gap: var(--space-2xs);
     color: var(--white-a11);
     font-size: var(--step-2);
     opacity: 0;
     transition: 0.4s opacity ease;
 
     .original & {
+      flex-direction: row;
       left: auto;
       right: var(--space-xs);
     }
@@ -110,9 +109,9 @@ const { type, song } = Astro.props;
   .link {
     display: block;
     position: relative;
-    line-height: 0;
     font-size: var(--step-1);
     user-select: none;
+    width: 100%;
     aspect-ratio: 1 / 1;
     background: var(--sand-3);
     overflow: hidden;
@@ -122,7 +121,7 @@ const { type, song } = Astro.props;
     &:hover {
       transform: scale(1.05);
 
-      .spotify-overlay {
+      .album-overlay {
         opacity: 1;
       }
     }
