--- a/src/components/Icon.astro
+++ b/src/components/Icon.astro
@@ -1,5 +1,5 @@
 ---
-import { iconData, type IconType } from "./IconTypes";
+import { iconData, type IconType } from "../types/icons";
 
 export interface Props {
   /**
