--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -8,6 +8,11 @@
 @import "@radix-ui/colors/orange-dark.css";
 @import "@radix-ui/colors/orange-dark-alpha.css";
 
+@import "@radix-ui/colors/red.css";
+@import "@radix-ui/colors/red-alpha.css";
+@import "@radix-ui/colors/red-dark.css";
+@import "@radix-ui/colors/red-dark-alpha.css";
+
 @import "@radix-ui/colors/violet.css";
 @import "@radix-ui/colors/violet-dark.css";
 
