--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -24,7 +24,7 @@
     a {
       font-weight: var(--font-weight-bold);
       text-decoration: underline;
-      text-decoration-color: var(--sand-7);
+      text-decoration-color: var(--mauve-7);
       text-underline-offset: 0.15em;
 
       &:hover {
@@ -36,6 +36,6 @@
   .divider {
     margin-inline: 0.5em;
     font-weight: var(--font-weight-bold);
-    color: var(--sand-10);
+    color: var(--mauve-10);
   }
 </style>
