--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,7 +1,12 @@
-@import "@radix-ui/colors/sand.css";
-@import "@radix-ui/colors/sand-alpha.css";
-@import "@radix-ui/colors/sand-dark.css";
-@import "@radix-ui/colors/sand-dark-alpha.css";
+@import "@radix-ui/colors/mauve.css";
+@import "@radix-ui/colors/mauve-alpha.css";
+@import "@radix-ui/colors/mauve-dark.css";
+@import "@radix-ui/colors/mauve-dark-alpha.css";
+
+@import "@radix-ui/colors/violet.css";
+@import "@radix-ui/colors/violet-alpha.css";
+@import "@radix-ui/colors/violet-dark.css";
+@import "@radix-ui/colors/violet-dark-alpha.css";
 
 @import "@radix-ui/colors/orange.css";
 @import "@radix-ui/colors/orange-alpha.css";
@@ -12,9 +17,6 @@
 @import "@radix-ui/colors/red-alpha.css";
 @import "@radix-ui/colors/red-dark.css";
 @import "@radix-ui/colors/red-dark-alpha.css";
-
-@import "@radix-ui/colors/violet.css";
-@import "@radix-ui/colors/violet-dark.css";
 
 @import "@radix-ui/colors/white-alpha.css";
 @import "@radix-ui/colors/black-alpha.css";
