--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import CoverCard from "../components/CoverCard.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 import { supabase } from "../lib/supabase";
 
@@ -10,9 +11,13 @@ const { data } = await supabase.from("covers").select();
   description="Some covers deliver the age-old simple pleasures of drag…"
 >
   <div class="main">
-    <h1>Genderswap.fm</h1>
-    <p>Some covers deliver the age-old simple pleasures of drag…</p>
-    {data?.map((cover) => <a href={`cover/${cover.slug}`}>{cover.slug}</a>)}
+    <header>
+      <h1>Genderswap.fm</h1>
+      <p>Some covers deliver the age-old simple pleasures of drag…</p>
+    </header>
+    <div class="covers-grid">
+      {data?.map((cover) => <CoverCard cover={cover} />)}
+    </div>
   </div>
 </BaseLayout>
 
@@ -23,12 +28,20 @@ const { data } = await supabase.from("covers").select();
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: var(--space-l);
     flex: 1;
     height: 100%;
+    padding: var(--space-l);
 
     p {
       font-size: var(--step-1);
       margin-block-start: 0.4em;
     }
+  }
+
+  .covers-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: var(--space-m);
   }
 </style>
