--- a/src/components/Tag.astro
+++ b/src/components/Tag.astro
@@ -13,8 +13,8 @@ const { text } = Astro.props;
 <style>
   .tag {
     display: inline-block;
-    background: var(--mauve-3);
-    color: var(--mauve-11);
+    background: var(--violet-3);
+    color: var(--violet-11);
     padding-inline: var(--space-2xs);
     border-radius: var(--radius-full);
     font-size: var(--step-0);
